--- a/lizetest/todo/templates/task_form.html
+++ b/lizetest/todo/templates/task_form.html
@@ -3,13 +3,13 @@
 {% block content %}
 <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
   <h2 style="text-align: center; margin-bottom: 20px;">
-    {% if request.resolver_match.url_name == 'task_create' %}Create{% else %}Edit{% endif %} Task
+    {% if request.resolver_match.url_name == 'task_create' %}Criar{% else %}Editar{% endif %} Task
   </h2>
   <form method="post" enctype="multipart/form-data" style="width: 400px; border: 1px solid #ccc; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgb(0, 0, 0);">
     {% csrf_token %}
     {{ form.as_p }}
     <button class="btn btn-primary" type="submit" style="width: 100%; padding: 10px;">
-      {% if request.resolver_match.url_name == 'task_create' %}Create{% else %}Save Changes{% endif %}
+      {% if request.resolver_match.url_name == 'task_create' %}Criar task{% else %}Save Changes{% endif %}
     </button>
   </form>
   <div style="text-align: center; margin-top: 20px;">
