--- a/lizetest/core/templates/sidebar.html
+++ b/lizetest/core/templates/sidebar.html
@@ -28,21 +28,24 @@
             </a>
         </li>
         <li>
-            <a href="{% url 'comments:comments_create' %}" class="nav-link link-dark">
-                Criar novo comentário 
+            <a href="{% url 'todo:task_create' %}" class="nav-link link-dark"
+                onmouseover="this.className='nav-link active'" onmouseout="this.className='nav-link link-dark'">
+                Criar nova tarefa
             </a>
         </li>
         <li>
-            <a href="{% url 'category:category_create' %}" class="nav-link link-dark">
+            <a href="{% url 'category:category_create' %}" class="nav-link link-dark"
+                onmouseover="this.className='nav-link active'" onmouseout="this.className='nav-link link-dark'">
                 Criar nova categoria
             </a>
         </li>
         <li style="padding-bottom: 30px;">
-            <a href="{% url 'todo:task_create' %}" class="nav-link link-dark">
-                Criar nova tarefa
+            <a href="{% url 'comments:comments_create' %}" class="nav-link link-dark" 
+                onmouseover="this.className='nav-link active'" onmouseout="this.className='nav-link link-dark'">
+                Criar novo comentário
             </a>
         </li>
-        <button type="button" class="btn btn-outline-info" id="btn-signout"> Sair do usuário  </button>
+        <button type="button" class="btn btn-outline-info" id="btn-signout"> Sair do usuário </button>
     </ul>
     <hr>
 
