--- a/lizetest/core/templates/base.html
+++ b/lizetest/core/templates/base.html
@@ -30,6 +30,9 @@
         .blink {
             animation: blink 1s infinite;
         }
+        li {
+            padding-bottom: 5px;
+        }
     </style>
 </head>
 
