--- a/lizetest/core/templates/sidebar.html
+++ b/lizetest/core/templates/sidebar.html
@@ -4,7 +4,7 @@
         <svg class="bi me-2" width="40" height="32">
             <use xlink:href="#bootstrap" />
         </svg>
-        <span class="fs-4">Bem vindo, {{user}}</span>
+        <span class="fs-4">Bem vindo, {{user.username}}</span>
     </a>
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
