--- a/lizetest/accounts/templates/registration/signup.html
+++ b/lizetest/accounts/templates/registration/signup.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
-  <h2 style="text-align: center; margin-bottom: 20px;">Sign Up</h2>
+  <h2 style="text-align: center; margin-bottom: 20px;">Criar usuário</h2>
   <form method="post" id="signupForm" style="width: 400px; border: 1px solid #ccc; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgb(0, 0, 0);">
     {% csrf_token %}
     {{ form.as_p }}
     <p id="aviso_text" style="font-weight: bold;"></p>
-    <button type="submit" class="btn btn-primary" style="width: 100%; padding: 10px; margin-top: 10px;">Sign Up</button>
+    <button type="submit" class="btn btn-primary" style="width: 100%; padding: 10px; margin-top: 10px;">Criar</button>
   </form>
   <div style="text-align: center; margin-top: 20px;">
     <a href="{% url 'accounts:login' %}">Já possue uma conta? Entre aqui</a>
