--- a/lizetest/core/templates/base.html
+++ b/lizetest/core/templates/base.html
@@ -30,6 +30,12 @@
         .blink {
             animation: blink 1s infinite;
         }
+
+        .sidebar-fixed {
+            position: fixed;
+            height: 100%;
+        }
+
         li {
             padding-bottom: 5px;
         }
