--- a/lizetest/comments/templates/comments_list.html
+++ b/lizetest/comments/templates/comments_list.html
@@ -4,8 +4,12 @@
 <div class="container-fluid">
   {% block content %}
   <div class="row">
-
-    <div class="col-auto">
+    <div class="col-12 d-md-none text-end">
+      <button class="btn btn-primary mb-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
+        Mostrar sidebar
+      </button>
+    </div>
+    <div class="offcanvas-md offcanvas-start d-md-flex flex-column flex-shrink-0 p-3 bg-light" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
       {% include 'sidebar.html' %}
     </div>
 
