--- a/lizetest/comments/templates/comments_list.html
+++ b/lizetest/comments/templates/comments_list.html
@@ -9,8 +9,10 @@
         Mostrar sidebar
       </button>
     </div>
-    <div class="offcanvas-md offcanvas-start d-md-flex flex-column flex-shrink-0 p-3 bg-light" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
-      {% include 'sidebar.html' %}
+    <div class="col-auto col-md-3">
+      <div class="offcanvas-md offcanvas-start d-md-flex flex-column flex-shrink-0 p-3 bg-light" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
+        {% include 'sidebar.html' %}
+      </div>
     </div>
 
     <div class="col">
