adicionando estilização de cards

--- a/lizetest/comments/templates/comments_list.html
+++ b/lizetest/comments/templates/comments_list.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="col">
-      <h2 style="padding-top: 15px;">Lista de comentários</h2><br>
+      <h2 style="padding-top: 15px; overflow: hidden;">Lista de comentários</h2><br>
 
 
       <table class="table table-bordered">
