--- a/lizetest/core/templates/base.html
+++ b/lizetest/core/templates/base.html
@@ -13,6 +13,10 @@
             background-color: #0d6efd;
         }
 
+        .card-title {
+            overflow-y: hidden;
+        }
+
         @keyframes blink {
             0% {
                 opacity: 1;
@@ -38,6 +42,11 @@
 
         li {
             padding-bottom: 5px;
+        }
+
+        * {
+            overflow-x: hidden;
+            overflow-y: auto ;
         }
     </style>
 </head>
