--- a/lizetest/core/templates/sidebar.html
+++ b/lizetest/core/templates/sidebar.html
@@ -1,5 +1,5 @@
 <!-- sidebar.html -->
-<div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width:270px;">
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
         <svg class="bi me-2" width="40" height="32">
             <use xlink:href="#bootstrap" />
