--- a/lizetest/category/templates/category_list.html
+++ b/lizetest/category/templates/category_list.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="col">
-      <h2 style="padding-top: 15px;">Lista de categorias</h2><br>
+      <h2 style="padding-top: 15px; overflow: hidden;">Lista de categorias</h2><br>
 
 
       <table class="table table-bordered">
