--- a/lizetest/todo/templates/task_list.html
+++ b/lizetest/todo/templates/task_list.html
@@ -84,7 +84,7 @@ function alterfilter(header) {
     }, 1000);
 
   const filter = header.getAttribute('data-field')
-  fetch(`http://localhost:8000/alterfilter/${filter}`, {
+  fetch(`https://richardataliba929.pythonanywhere.com/alterfilter/${filter}`, {
       method: 'GET',
     })
       .then(response => response.json())
@@ -126,7 +126,7 @@ function deletetask() {
       alert('A tarefa '+String(name_task)+ " não pode ser removida porque é uma tarefa completa")
     }
 
-    fetch(`http://localhost:8000/altertask/delete/${id_task}`, {
+    fetch(`https://richardataliba929.pythonanywhere.com/altertask/delete/${id_task}`, {
       method: 'GET',
     })
       .then(response => response.json())
@@ -142,7 +142,7 @@ function alter(event) {
     const checkbox = event.target;
     const id_task = checkbox.getAttribute('data-task-id')
 
-    fetch(`http://localhost:8000/altertask/completed/${id_task}`, {
+    fetch(`https://richardataliba929.pythonanywhere.com/altertask/completed/${id_task}`, {
       method: 'GET',
     })
       .then(response => response.json())
